force-app/main/default/objects/Service_Delivery_Area__c/Service_Delivery_Area__c.object-meta.xml
<CustomObject>
    <label>Service Delivery Area</label>
    <nameField>
        <displayFormat>SDA-{0000000}</displayFormat>
        <label>Service Delivery Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Delivery Area</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>