force-app/main/default/objects/Service_Delivery_Area__c/fields/Allotment__c.field-meta.xml
<CustomField>
    <fullName>Allotment__c</fullName>
    <label>Allotment</label>
    <referenceTo>Allotment__c</referenceTo>
    <relationshipLabel>Service Delivery Area</relationshipLabel>
    <relationshipName>Service_Delivery_Area</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>