force-app/main/default/objects/Service_Delivery_Area__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Service Delivery Area</relationshipLabel>
    <relationshipName>Service_Delivery_Area</relationshipName>
    <type>Lookup</type>
</CustomField>