force-app/main/default/objects/Service_Delivery_Area__c/fields/GPMS_Aged_Care_Planning_Region__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Aged_Care_Planning_Region__c</fullName>
    <description>ACPR in this SDA</description>
    <label>Aged Care Planning Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>