force-app/main/default/objects/Service_Delivery_Area__c/fields/GPMS_SA2__c.field-meta.xml
<CustomField>
    <fullName>GPMS_SA2__c</fullName>
    <description>SA2 in this SDA</description>
    <label>SA2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>