force-app/main/default/objects/Service_Delivery_Area__c/fields/Ineffective_Date__c.field-meta.xml
<CustomField>
    <fullName>Ineffective_Date__c</fullName>
    <label>Ineffective Date</label>
    <type>Date</type>
</CustomField>