force-app/main/default/objects/Service_Delivery_Area__c/fields/LegacyCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>LegacyCreatedBy__c</fullName>
    <description>For data migration purpose.</description>
    <label>Legacy Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>