force-app/main/default/objects/Service_Delivery_Area__c/fields/Number_of_Places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Places__c</fullName>
    <label>Number of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>