force-app/main/default/objects/Service_Delivery_Area__c/fields/SA2__c.field-meta.xml
<CustomField>
    <fullName>SA2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA2</label>
    <referenceTo>SA2__c</referenceTo>
    <relationshipLabel>Service Delivery Area</relationshipLabel>
    <relationshipName>Service_Delivery_Area</relationshipName>
    <type>Lookup</type>
</CustomField>