force-app/main/default/objects/Service_Delivery_Area__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Non-current</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Approved-not activated</fullName>
            </value>
            <value>
                <fullName>Not approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>